# vii

./: .gitignore  .vii-pids  README.md  app.py  build_app.sh  desktop.py  install.sh  main.py  models  onboarding.py  remote_server.py  requirements.txt  run_vii.py  settings_ui.py  setup_autostart.sh  start-telegram.sh  start.sh  telegram_remote.py  tts-venv  vii.py
config/: avatar-viewer.html  dictionary.json  orb-position.json  overlay-settings.json  settings.json  skins.json
core/: __init__.py  chat_bubble.py  db.py  reminders.py  skins.py  text_input.py  wakeword.py
core/audio/: __init__.py
core/echo/: __init__.py
core/pipeline/: __init__.py  audio_output.py  frames.py  llm_service.py  orchestrator.py  processor.py  text_cleaner.py  tts_service.py
data/: vii.db
docs/: 747-ecosystem.excalidraw  ARCHITECTURE.md  BUSINESS-STRATEGY.md  FEATURE-GAP.md  FRONTEND-UX-SPEC.md  KEITH-SCHACHT-PATTERNS.md  PRODUCT-HUNT-COMPETITORS.md  project-map.html
launch/: demo-script.md  launch-checklist.md  product-hunt-listing.md
overlay/skins/bob/: skin.json
overlay/skins/falcon/: skin.json
overlay/skins/pixi/: skin.json
overlay/swift/: Package.swift
remote/: __init__.py
remote/telegram/: __init__.py  bot.py
rust-stt/: Cargo.toml
rust-stt/src/: agent_api.rs  audio.rs  config.rs  dictionary.rs  dispatch.rs  hotkey.rs  inject.rs  main.rs  overlay_ipc.rs  response_watcher.rs  streaming_agent.rs  transcribe.rs  tts.rs  vad.rs
scripts/: tts-daemon-v2.py  tts-daemon.py  tts-speak.py
tests/: test_pipeline_speed.py
(+8 files in other folders)
